Changement de connexion à la base de données PostgreSQL->SQL Server

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Mercadona7_App-e8cb83b0-6655-44cc-babd-ddcd75ced989;Trusted_Connection=True;MultipleActiveResultSets=true"
-    "Mercadona_DB": "User ID=postgres;Password=M@tM@x64;Host=localhost;Port=5432;Database=Mercadona_DB;Pooling=true;Integrated Security=true;"
+    //"Mercadona_DB": "User ID=postgres;Password=M@tM@x64;Host=localhost;Port=5432;Database=Mercadona_DB;Pooling=true;Integrated Security=true;",
+    "Mercadona_DB": "Server=(localdb)\\MSSQLLocalDB;Database=Mercadona;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
